# ethical-cs-1331

./: .gitignore  README.md
hw1/: driver.hs  hw1.cabal
hw1/src/: Main.hs
hw2/: hw2.cabal
hw2/src/: Main.hs
hw3/: driver.ipkg
hw3/src/: Main.idr
hw4/src/: Main.idr
hw5/: dessert.ipkg
hw5/src/: Main.idr
hw6/: TestTickets.csv
hw6/src/: Main.idr
hw7/: test.ipkg
hw7/src/: Main.idr
hw8/: test.ipkg
hw8/src/: Main.idr
pe0/: test.ipkg
pe1/src/: Main.idr
pe2/: pe2.cabal
pe2/src/: Main.hs
pe3/: pe3.cabal
pe3/src/: Main.hs
pe4/: pe4.cabal
pe4/src/: Main.hs
