cabal-version:      3.0
name:               hw2
version:            0.1.0.0
build-type:         Simple

executable hw2
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        random ^>=1.2.1.2,
        data-default ^>=0.7.1.1
    hs-source-dirs:   src
    default-language: Haskell2010
